# cpp-improvement-tutorial

./: .gitignore  CMakeLists.txt  LICENSE  README.md
CMakeModules/: FindGTestSrc.cmake
UML/: Cocos2d.eapx
UML/【Cocos源码解析】游戏渲染总览——游戏渲染，就是拍戏/: New DOCX 文档.docx
code/03/: CMakeLists.txt  main.cpp
code/03/shared/: CMakeLists.txt  Shared.cpp  Shared.h
code/04/: CMakeLists.txt  main.cpp
code/05/: CMakeLists.txt  main.cpp
code/06/: main.cpp
code/07/: task.cpp  task.h
doc/: 00 .preface.md  01. RAII.md  02. Singleton.md  03. Shared Library in Windows.md  04. Make Shared Library.md  05 Fold expression.md  06 Range For.md  Literal and Custom Literal.md  Singleton.md  preface.md
src/: CMakeLists.txt  main.cpp
src/core/: CMakeLists.txt  fmt_string.h  log_level.h  log_setting.cpp  log_setting.h  log_settings_state.cpp  logging.cpp  logging.h  macros.h  scope_exit.h
src/core/logging/: LogMessage.cpp  LogMessage.h
src/core/time/: time_delta.cpp  time_delta.h  time_point.cpp  time_point.h
src/net/: CMakeLists.txt  header.h  method.h  request.cpp  request.h  url.cpp  url.h
src/net/http/cli/: CMakeLists.txt  authentication.cpp  authentication.h  body.cpp  body.h  cookies.cpp  cookies.h  digest.cpp  digest.h  error.cpp  error.h  header.h  maxRedirects.cpp  maxRedirects.h  method.h  multipart.cpp  multipart.h  parameters.cpp  parameters.h  response.cpp  response.h  retries.h  session.cpp  session.h  session_impl.cpp  session_impl.h  session_unittests.cpp  timeout.cpp  timeout.h  url.cpp  url.h
src/net/http/cli/implement/beast/: CMakeLists.txt  session_impl_beast.cpp  session_impl_beast.h
src/net/http/cli/implement/ev/: CMakeLists.txt  session_impl_ev.cpp  session_impl_ev.h
src/net/http_cli/: CMakeLists.txt  authentication.cpp  authentication.h  body.cpp  body.h  cookies.cpp  cookies.h  digest.cpp  digest.h  error.cpp  error.h  header.h  maxRedirects.cpp  maxRedirects.h  method.h  multipart.cpp  multipart.h  parameters.cpp  parameters.h  request.cpp  request.h  response.cpp  response.h  retries.h  session.cpp  session.h  session_impl.cpp  session_impl.h  session_unittests.cpp  timeout.cpp  timeout.h  url.cpp  url.h
src/net/http_cli/implement/: CMakeLists.txt
src/net/http_cli/implement/beast/: CMakeLists.txt  session_impl_beast.cpp  session_impl_beast.h
src/net/http_cli/implement/ev/: CMakeLists.txt  host_check.cpp  host_check.h  openssl_hostname_validation.cpp  openssl_hostname_validation.h  session_impl_ev.cpp  session_impl_ev.h
src/net/http_cli/implement/uv/: CMakeLists.txt  session_impl_uv.cpp  session_impl_uv.h
src/net/httpcli/: Authentication.cpp  Authentication.h  Body.cpp  Body.h  CMakeLists.txt  Cookies.cpp  Cookies.h  Digest.cpp  Digest.h  Handler.cpp  Handler.h  Header.cpp  Header.h  MaxRedirects.cpp  MaxRedirects.h  Method.cpp  Method.h  Multipart.cpp  Multipart.h  Parameters.cpp  Parameters.h  Session-inl.h  Session.cpp  Session.h  SessionImpl.cpp  SessionImpl.h  Timeout.cpp  Url.cpp  Url.h  authentication.cpp  authentication.h  body.cpp  body.h  cookies.cpp  cookies.h  error.cpp  error.h  handler.cpp  maxRedirects.cpp  method.cpp  (+13 more)
src/net/httpcli/implement/: CMakeLists.txt
src/net/httpcli/implement/beast/: CMakeLists.txt  SessionImplBeast.cpp  SessionImplBeast.h  session_impl_beast.cpp  session_impl_beast.h
src/net/web_socket/cli/: CMakeLists.txt  session.cpp  session.h  session_impl.cpp  session_impl.h
src/net/ws_cli/: CMakeLists.txt  Handler.h  connect_handler.cpp  connect_handler.h  header.h  message_handler.cpp  message_handler.h  response.cpp  response.h  session.cpp  session.h  session_impl.cpp  session_impl.h  session_unittests.cpp  util.cpp  util.h  ws_header.cpp  ws_header.h  ws_state.h  ws_types.h
src/net/ws_cli/implement/: CMakeLists.txt
src/net/ws_cli/implement/ev/: CMakeLists.txt  base64.cpp  base64.h  base64_unittests.cpp  session_impl_ev.cpp  session_impl_ev.h  utf8_utils.cpp  utf8_utils.h  util.cpp  util.h  ws_header.cpp  ws_header.h  ws_state.h  ws_types.h
src/net/ws_cli/implement/uv/: CMakeLists.txt  session_impl_uv.cpp  session_impl_uv.h
src/pipeline/: CMakeLists.txt  pipeline.cpp  pipeline.h  pipeline_unittests.cpp
src/reflect/: Class.h  Field.h  FieldDescriptor.cpp  FieldDescriptor.h  Method.h  MethodDescriptor.cpp  MethodDescriptor.h  TypeDescriptor.h  Value.cpp  Value.h
src/wtf/: CMakeLists.txt  singleton.h  trace_event.cpp  trace_event.h
src/wtf/logging/: log_level.h  log_setting.cpp  log_settings_state.cpp  logging.cpp  logging.h
src/wtf/sync/: CMakeLists.txt  semaphore.cpp  semaphore.h  waitable_event.cpp  waitable_event.h  waitable_event_unittest.cpp
src/wtf/task_runner/: CMakeLists.txt  delayed_task.cpp  delayed_task.h  message_loop.h  message_loop_impl.cpp  message_loop_task_queues.cpp  message_loop_task_queues.h  message_loop_unittests.cpp  task_runner.h  task_source.cpp  task_source.h  task_source_grade.h  thread.cpp  thread_local_unittests.cpp  wakeable.h
src/wtf/task_runner/platform/win/: message_loop_win.h  message_loop_win_unittests.cpp
src/wtf/time/: time_delta.h  time_point.cpp
test/: CMakeLists.txt  unittests.cpp  xxxxx.cpp
test/net/http_cli/: CMakeLists.txt  http_cli_unittests.cpp
test/net/ws_cli/: CMakeLists.txt  ws_cli_unittests.cpp
test/pipeline/: CMakeLists.txt
test/wtf/sync/: CMakeLists.txt
test/wtf/task_runner/: CMakeLists.txt
