PROJECT(test)

CMAKE_MINIMUM_REQUIRED(VERSION 3.17)

SET(PROJECT_ROOT_PATH "${CMAKE_SOURCE_DIR}")
SET(EXECUTABLE_OUTPUT_PATH "${CMAKE_SOURCE_DIR}/bin/")
SET(LIBRARY_OUTPUT_PATH "${CMAKE_SOURCE_DIR}/lib/")

INCLUDE_DIRECTORIES("${PROJECT_ROOT_PATH}/include/")
LINK_DIRECTORIES("${CMAKE_SOURCE_DIR}/lib/")

ADD_SUBDIRECTORY(src)