CMAKE_MINIMUM_REQUIRED(VERSION 3.17)

PROJECT(test VERSION 0.0.0
    DESCRIPTION ""
    HOMEPAGE_URL ""
    LANGUAGES CXX)

SET(PROJECT_ROOT_PATH "${CMAKE_SOURCE_DIR}")
SET(EXECUTABLE_OUTPUT_PATH "${CMAKE_SOURCE_DIR}/bin/")
SET(LIBRARY_OUTPUT_PATH "${CMAKE_SOURCE_DIR}/lib/")

INCLUDE_DIRECTORIES("${PROJECT_ROOT_PATH}/include/")
LINK_DIRECTORIES("${CMAKE_SOURCE_DIR}/lib/")

# For Openssl
SET(OPENSSL_ROOT_DIR "${PROJECT_SOURCE_DIR}/third_party/openssl-1.1.1i")
FIND_PACKAGE(OpenSSL REQUIRED)
MESSAGE("OPENSSL_INCLUDE_DIR: ${OPENSSL_INCLUDE_DIR}")

FIND_PACKAGE(LibEvent REQUIRED)
MESSAGE("LIBEVENT_INCLUDE_DIR: ${LIBEVENT_INCLUDE_DIRS}")
MESSAGE("LIBEVENT_LIBRARY_DIR: ${LIBEVENT_LIBRARY_DIR}")
MESSAGE("LIBEVENT_LIBRARIES: ${LIBEVENT_LIBRARIES}")

ADD_SUBDIRECTORY(src)
#ADD_SUBDIRECTORY(third_party/libevent)
SET(CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/CMakeModules)
ADD_SUBDIRECTORY(test)