CMAKE_MINIMUM_REQUIRED(VERSION 3.17)
PROJECT(test_dll VERSION 0.0.0
    DESCRIPTION ""
    HOMEPAGE_URL ""
    LANGUAGES CXX)
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin) #dll path
SET(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib) #lib path
SET(CMAKE_COMPILE_PDB_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/pdb) #pdb path

SET(MAIN_SRC "${CMAKE_CURRENT_SOURCE_DIR}/main.cpp")
ADD_EXECUTABLE(main ${MAIN_SRC})