
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/src)
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/src/wtf)

ADD_SUBDIRECTORY(logging)
ADD_SUBDIRECTORY(time)
ADD_SUBDIRECTORY(sync)
ADD_SUBDIRECTORY(task_runner)

SET(WTF_DIR ${CMAKE_CURRENT_SOURCE_DIR})

SET(WTF_SRC)

#ADD_LIBRARY(wtf STATIC ${WTF_SRC})

#TARGET_LINK_LIBRARIES(wtf PRIVATE logging sync)

