
SET(PIPELINE_TEST_DIR ${PROJECT_SOURCE_DIR}/src/pipeline)

INCLUDE_DIRECTORIES(${GTEST_INCLUDE_DIR})
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/src)

SET(PIPELINE_TEST_SRC
    ${PIPELINE_TEST_DIR}/pipeline_unittests.cpp
    )

ADD_EXECUTABLE(pipeline_unittests ${PIPELINE_TEST_SRC})


TARGET_LINK_LIBRARIES(pipeline_unittests PRIVATE ${GTEST_LIBRARIES} wtf pipeline)
