
SET(SYNC_TEST_DIR ${PROJECT_SOURCE_DIR}/src/wtf/sync)

INCLUDE_DIRECTORIES(${GTEST_INCLUDE_DIR})
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/src)
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/src/wtf)

SET(SYNC_TEST_SRC
    ${SYNC_TEST_DIR}/waitable_event_unittest.cpp
    )

ADD_EXECUTABLE(sync_unittests ${SYNC_TEST_SRC})


TARGET_LINK_LIBRARIES(sync_unittests PRIVATE ${GTEST_LIBRARIES} sync timepoint logging)
