INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/src)
INCLUDE_DIRECTORIES(${HTTP_CLI_DIR})

SET(HTTP_CLI_IMPL_SRC
    session_impl_uv.cpp)

ADD_LIBRARY(http_cli_impl STATIC ${HTTP_CLI_IMPL_SRC})
TARGET_LINK_DIRECTORIES(http_cli_impl PRIVATE ${LIBUV_LIBRARY_DIR})
TARGET_LINK_LIBRARIES(http_cli_impl PRIVATE ${LIBUV_LIBRARIES} ${OPENSSL_LIBRARIES} Crypt32.lib)