add_compile_options("/std:c++17")

# For Openssl
SET(OPENSSL_ROOT_DIR "${PROJECT_SOURCE_DIR}/third_party/openssl-1.1.1i")
FIND_PACKAGE(OpenSSL REQUIRED)
INCLUDE_DIRECTORIES(${OPENSSL_INCLUDE_DIR})


INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/src)
INCLUDE_DIRECTORIES(${HTTP_CLI_DIR})

SET(HTTP_CLI_IMPL_SRC
    session_impl_beast.cpp)

ADD_LIBRARY(http_cli_impl STATIC ${HTTP_CLI_IMPL_SRC})